--- a/requirements.txt
+++ b/requirements.txt
@@ -21,17 +21,23 @@ httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
 jiter==0.11.0
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+langchain-core==0.3.77
+langchain-openai==0.3.34
+langsmith==0.4.31
 markdown-it-py==4.0.0
-MarkupSafe==3.0.2
+MarkupSafe==3.0.3
 mdurl==0.1.2
 multitasking==0.0.12
-narwhals==2.5.0
+narwhals==2.6.0
 numpy==2.3.3
-openai==1.58.1
+openai==2.0.1
+orjson==3.11.3
 packaging==24.2
-pandas==2.3.2
+pandas==2.3.3
 peewee==3.18.2
 pillow==11.3.0
 platformdirs==4.4.0
@@ -45,8 +51,11 @@ Pygments==2.19.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+PyYAML==6.0.3
 referencing==0.36.2
+regex==2025.9.18
 requests==2.32.5
+requests-toolbelt==1.0.0
 rich==13.9.4
 rpds-py==0.27.1
 six==1.17.0
@@ -54,8 +63,8 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
 streamlit==1.41.1
-tabulate==0.9.0
 tenacity==9.1.2
+tiktoken==0.11.0
 toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
@@ -66,3 +75,4 @@ urllib3==2.5.0
 watchdog==6.0.0
 websockets==15.0.1
 yfinance==0.2.66
+zstandard==0.25.0
